Complete the project

--- a/Cuong/app/src/main/res/values/colors.xml
+++ b/Cuong/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorSongName">#000000</color>
+    <color name="colorSinger">#9c9c9c</color>
 </resources>
