--- a/Hung/app/src/main/res/layout/item.xml
+++ b/Hung/app/src/main/res/layout/item.xml
@@ -2,19 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_height="match_parent">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/txtTen"
         android:layout_width="match_parent"
-        android:layout_height="38dp"
+        android:layout_height="wrap_content"
         android:text="TextView" />
 
     <TextView
         android:id="@+id/txtPhone"
         android:layout_width="match_parent"
-        android:layout_height="33dp"
+        android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@android:color/holo_green_dark"
         android:textStyle="italic" />
