--- a/Hung/app/src/main/res/layout/item.xml
+++ b/Hung/app/src/main/res/layout/item.xml
@@ -10,7 +10,8 @@
         android:id="@+id/txtTen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/txtPhone"
@@ -18,6 +19,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="@android:color/holo_green_dark"
+        android:textSize="12sp"
         android:textStyle="italic" />
 
     <LinearLayout
