--- a/Linh/app/src/main/res/layout/activity_main.xml
+++ b/Linh/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <ListView
-            android:id="@+id/Listviewtraicay"
+            android:id="@+id/lvFruit"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="8dp"
