--- a/Linh/app/src/main/res/layout/row_fruit.xml
+++ b/Linh/app/src/main/res/layout/row_fruit.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,21 +13,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageviewhinh"
-                android:layout_width="120dp"
-                android:layout_height="120dp" />
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
 
             <TextView
                 android:id="@+id/textviewten"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="ten"
-                android:textColor="#ff00"
-                android:textSize="30dp"
+                android:layout_marginLeft="10dp"
+                android:textColor="@android:color/darker_gray"
+                android:textSize="15dp"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
